# swagger.json
@@ -7,7 +7,9 @@
   },
   "host": "localhost:8080",
   "basePath": "/",
-  "schemes": "http",
+  "schemes": [
+    "http"
+  ],
   "paths": {
     "/temples/": {
       "get": {
@@ -41,10 +43,10 @@
                   "example": "any"
                 },
                 "temple_id": {
-                  "example": "any"
+                  "example": 555
                 },
-                "description": {
-                  "example": "any"
+                "dedicated": {
+                  "example": "2024-01-23"
                 },
                 "location": {
                   "example": "any"
@@ -59,6 +61,17 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
@@ -92,6 +105,116 @@
           "500": {
             "description": "Internal Server Error"
           }
+        }
+      }
+    },
+    "/temples/{id}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "new"
+                },
+                "dedicated": {
+                  "example": "2024-12-23"
+                },
+                "location": {
+                  "example": "new"
+                },
+                "temple_id": {
+                  "example": 999
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "newTemple": {
+      "type": "object",
+      "properties": {
+        "temple_id": {
+          "type": "number",
+          "example": 555
+        },
+        "name": {
+          "type": "string",
+          "example": "any"
+        },
+        "location": {
+          "type": "string",
+          "example": "any"
+        },
+        "dedicated": {
+          "type": "string",
+          "example": "2024-01-12"
+        }
+      }
+    },
+    "updateTemple": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "new"
+        },
+        "location": {
+          "type": "string",
+          "example": "new"
+        },
+        "dedicated": {
+          "type": "string",
+          "example": "2024-12-22"
         }
       }
     }
